@@ -30,8 +30,6 @@ angular.module('console', ['sql', 'datatypechecks'])
           inputScope = scope;
         };
 
-        var loadingIndicator = Ladda.create(document.querySelector('#execute-btn'));
-
         $scope.storeInLocalStorageChanged = function() {
           localStorage.setItem('crate.console.store_queries', $scope.useLocalStorage === true ? '1' : '0');
         };
@@ -108,11 +106,11 @@ angular.module('console', ['sql', 'datatypechecks'])
 
           updateRecentQueries(stmt);
 
-          loadingIndicator.start();
+          $scope.loading = true;
           $('#console-options').slideUp();
           SQLQuery.execute(stmt, {} , $scope.showErrorTrace, true)
           .success(function(sqlQuery) {
-            loadingIndicator.stop();
+            $scope.loading = false;
             $scope.error.hide = true;
             $scope.error.message = '';
             $scope.error.error_trace = '';
@@ -138,7 +136,7 @@ angular.module('console', ['sql', 'datatypechecks'])
             inputScope.updateInput($scope.statement);
           })
           .error(function(sqlQuery) {
-            loadingIndicator.stop();
+            $scope.loading = false;
             $scope.error.hide = false;
             $scope.renderTable = false;
             $scope.error = sqlQuery.error;
